<resources>
    <string name="app_name">NYTimesApp</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>


    <string name="toast_no_results">No articles found.</string>
    <string name="action_filter">Filter</string>
    <string name="progress_loading">Loading articles…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="dialog_title">Filters</string>
    <string name="dialog_sub_begin_date">Not older than…</string>
    <string name="dialog_sub_end_date">Not newer than…</string>
    <string name="pref_begin_date">pref_begin_date</string>
    <string name="pref_end_date">pref_end_date</string>
    <string name="pref_sort_order">pref_sort_order</string>
    <string name="title_detail_activity">Read Article</string>
    <string name="pref_news_desk">pref_news_desk</string>

    <string name="hint">Enter search query</string>

    <string name="title_activity_article">ArticleActivity</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="settings_title">Filter Search Results</string>
    <string name="search_query_title">Query:</string>
    <string name="search_filter_title">Filter:</string>
    <string name="begin_date_title">Begin Date</string>
    <string name="date_hint">Click to set date...</string>
    <string name="num_results">Hits:</string>
    <string name="news_desk_title">News Desk Topics</string>
    <string name="chk_arts">Arts</string>
    <string name="chk_fashion_and_style">Fashion &amp; Style</string>
    <string name="chk_sports">Sports</string>
    <string name="sort_order_tile">Sort Order</string>
    <string name="sort_order_prompt">Choose a sort order</string>
    <string-array name="sort_order_options">
        <item>Default</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>
